# bittensor-sentiment-api

./: .editorconfig  .env.example  .gitignore  .prettierrc.json  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
app/: main.py  tasks.py  worker.py
app/api/v1/: tao_dividends.py  wallets.py
app/cache/: redis.py  singleton.py
app/core/: auth.py  config.py
app/db/: session.py
app/models/: stake_action.py
app/services/: bittensor_substrate_service.py  chutes_service.py  datura_service.py  singleton.py
scripts/: manage_wallet.py  request_api
tests/: test_chutes_service.py  test_concurrence.py  test_datura_service.py  test_substrate_service.py  test_tao_dividends.py  test_tasks.py
wallets/coso/: coldkey  coldkeypub.txt
wallets/coso/hotkeys/: default
wallets/temp_faucet/faucet_temp/: coldkey  coldkeypub.txt
wallets/testnet/: coldkey  coldkeypub.txt
wallets/testnet/hotkeys/: default  testnet
