[project]
name = "bittensor-sentiment-api2"
version = "0.1.0"
description = ""
authors = [
    {name = "Israel López",email = "israel.lopez.developer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.11"
dependencies = [
    "fastapi (>=0.110.1,<0.111.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "uvicorn[standard] (>=0.34.1,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "celery[redis] (>=5.5.1,<6.0.0)",
    "bittensor (>=9.3.0,<10.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "async-substrate-interface (>=1.1.0,<2.0.0)",
    "substrate-interface (>=1.7.11,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "tenacity (>=9.1.2,<10.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "orjson (>=3.10.16,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"
pip-audit = "^2.9.0"
pipdeptree = "^2.26.0"
pdoc = "^15.0.1"
respx = "^0.22.0"

[tool.ruff]
line-length = 100
target-version = 'py311'
exclude = ["migrations", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
preview = true

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.poetry.scripts]
docs = "pdoc:cli"
audit = "pip_audit.__main__:main"

[tool.pdoc]
docformat = "google"
output_directory = "docs"
modules = ["app"]
